# tasty-hspec

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project  cabal.project.freeze  cabal.project.hspec-2.4  cabal.project.hspec-2.5  cabal.project.hspec-2.6  cabal.project.hspec-2.7  stack.yaml  tasty-hspec.cabal
.github/workflows/: ci.yaml  haskell-ci.yml
Test/Tasty/: Hspec.hs
Test/Tasty/Hspec/: Options.hs
ci/: build.sh  install.sh
examples/: example.hs
src/Test/Tasty/: Hspec.hs
src/Test/Tasty/Hspec/: Compat.hs
test/: Main.hs
