name:                tasty-hspec
version:             0.1.0.1
synopsis:            Hspec support for the Tasty test framework.
description:         Hspec support for the Tasty test framework.

homepage:            http://github.com/mitchellwrosen/tasty-hspec
license:             BSD3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Test.Tasty.Hspec
  other-extensions:    DeriveDataTypeable
  build-depends:       base       >=4.0  && <5.0
                     , hspec      >=1.6  && <2.0
                     , QuickCheck >=2.4  && <2.8
                     , tasty      >= 0.8 && <1.0
  default-language:    Haskell2010
